[gd_scene load_steps=4 format=3 uid="uid://d12yvf7i1e3kv"]

[ext_resource type="Script" path="res://Main.gd" id="1_ydpyb"]
[ext_resource type="PackedScene" uid="uid://da3ayjtjene3x" path="res://world.tscn" id="2_6lcp0"]
[ext_resource type="PackedScene" uid="uid://lef3cji6pgl2" path="res://menu.tscn" id="3_pay0w"]

[node name="Main" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_ydpyb")
metadata/_edit_vertical_guides_ = [626.0]
metadata/_edit_horizontal_guides_ = [227.0]

[node name="World" type="Node2D" parent="."]
visible = false
position = Vector2(114, 37)

[node name="Level" parent="World" instance=ExtResource("2_6lcp0")]

[node name="MessageInput" type="LineEdit" parent="."]
offset_left = 85.0
offset_top = 418.0
offset_right = 578.0
offset_bottom = 452.0

[node name="Menu" parent="." instance=ExtResource("3_pay0w")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../World")

[connection signal="text_submitted" from="MessageInput" to="." method="_on_message_input_text_submitted"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]

[editable path="Menu"]
